objects/clm__CustomScenario__c.object
<CustomObject>
    <description>CT CLM: Stores user created scenarios</description>
    <fields>
        <fullName>clm__ApplicationId__c</fullName>
        <label>Application</label>
        <referenceTo>clm__Application__c</referenceTo>
        <relationshipLabel>Custom Scenarios</relationshipLabel>
        <relationshipName>CustomScenarios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>clm__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__IsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__IsFavorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__ScenarioEditor__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_300, &apos;clm&apos;), HYPERLINK(SUBSTITUTE(LEFT($Api.Enterprise_Server_URL_300,(FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_300))), &apos;/services&apos;, &apos;&apos;)&amp;&apos;apex/ScenarioEditor?id=&apos;&amp; Id , IMAGE(&apos;/img/icon/t4v32/standard/poll_60.png&apos;, &apos;Scenario Editor&apos;, 30, 30), &apos;_self&apos;), HYPERLINK(SUBSTITUTE(LEFT($Api.Enterprise_Server_URL_300,(FIND(&apos;.&apos;, $Api.Enterprise_Server_URL_300))), &apos;https://&apos;, &apos;https://clm.&apos;)&amp;&apos;visual.force.com/apex/ScenarioEditor?id=&apos;&amp; Id , IMAGE(&apos;/img/icon/t4v32/standard/poll_60.png&apos;, &apos;Scenario Editor&apos;, 30, 30), &apos;_self&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario Editor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__ScenarioName__c</fullName>
        <label>Scenario Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__SlideIds__c</fullName>
        <label>Slide Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>clm__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CustomScenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Custom Scenario</label>
    <nameField>
        <displayFormat>CS{00000} | {DD}.{MM}.{YYYY}</displayFormat>
        <label>Custom Scenario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Scenarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>